edit entries prior to Kentucky and add readingthroughwindow

--- a/entries/projects/magicandmachine/11corruptedaudiowaves.html
+++ b/entries/projects/magicandmachine/11corruptedaudiowaves.html
@@ -15,11 +15,11 @@
         <p>corrupted audio waves
             <br>a wave being just a fluctuating line
             <br>audio being something you can corrupt without it necessarily becoming evil
-            <br>remind you that you're listening to imitations of speech
+            <br>a reminder that you're listening to imitations of speech
             <br>a signal masquerading as human
             <br>
-            <br>when it breaks up you're reminded
-            <br>of a thin binary shell
+            <br>when it breaks up 
+            <br>a reminder of a thin binary shell
             <br>that can't deal with heavy traffic at metropolitan intersections 
             <br>or the piling up of the conglomerate dead 
             <br>
