--- a/entries/projects/magicandmachine/120pretending.html
+++ b/entries/projects/magicandmachine/120pretending.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="maintextsection">
-        <p>Grown-ups sitting round a table, making up adventures and pretending, quite openly, to be people that they're not. Together, they create a world everyone knows isn't there, within boundaries everyone knows exist, and they stoke it to ensure it stays lit. 
+        <p>Grown-ups sitting around a table, making up adventures and pretending, quite openly, to be people that they're not. Together, they create a world everyone knows isn't there, within boundaries everyone knows exist, and they stoke it to ensure it stays lit. 
         </p>
     
     </div>
