--- a/entries/projects/magicandmachine/36maggots.html
+++ b/entries/projects/magicandmachine/36maggots.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="maintextsection">
-        <p>By that point, we may have been questioning whether magic had left our world. Our interest, however, was revamped when we arrived in a small rural community, the inhabitants of which were panicking about a hellish rift that had appeared in their corn fields overnight.</p>
+        <p>By that point, we may have been questioning whether magic had left our world forever. Our interest was revamped when we arrived in a small rural community, the inhabitants of which were panicking about a hellish rift that had appeared in their corn fields overnight.</p>
         <p>The real selling point - maggots, bubbling up from the gorge and dribbling out into the crops. This was predictable demonic behaviour. We caught the flavour of it. It gave our characters new life. We knew we were dealing with a manageable devil, manageable because it chose a form we recognised.</p> 
         <p>We jumped around in a partially collapsed church, the collapse caused by an earthquake, (another biblical symptom of doom). The undead turned up soon after.</p>
     </div>
