--- a/entries/projects/magicandmachine/38piston.html
+++ b/entries/projects/magicandmachine/38piston.html
@@ -24,7 +24,7 @@
             <br>
             civilian bombing and drone warfare become obvious dramatic conclusions<br>
             <br>
-            there are lots of images of red suns and huge waves in the Pacific<br>
+            there are lots of images of red suns and waves tall as clouds in the Pacific<br>
             <br>
             islands and their humans appear like pinpricks in the hide of a vast cow<br>
             <br>
