--- a/entries/projects/magicandmachine/39childwriting.html
+++ b/entries/projects/magicandmachine/39childwriting.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="maintextsection">
-        <p>the troubling troubling troubling notion that you're repeatedly failing to escape writing like a child</p>
+        <p>the troubling troubling troubling notion that you're repeatedly failing failing failing to escape writing like a child</p>
     </div>
     <div class="leave">
         <p>
