--- a/entries/projects/magicandmachine/47wiredchildren.html
+++ b/entries/projects/magicandmachine/47wiredchildren.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="maintextsection">
-        <p>sceptres of aluminium puncturing the sky over wetlands in the near dark, bulbs on top to prevent aircraft from impaling themselves</p>
+        <p>sceptres of aluminium puncturing the sky over wetlands in the near-ish dark, bulbs on top to prevent aircraft from impaling themselves</p>
 
     </div>
     <div class="leave">
