--- a/entries/projects/magicandmachine/62animals.html
+++ b/entries/projects/magicandmachine/62animals.html
@@ -14,7 +14,7 @@
     <div class="maintextsection">
         <p>The invisible machines try to get inside the animals. </p>
         <p>The wise old squirrel, free, staying above ground, unplugged - it is infiltrated during hibernation. It wakes in spring to find its eyes brimming with data. Knowledge of all acorns in every buried hole.</p>
-        <p>Birds prove harder to catch. The pathogen struggles to get inside them mid-flight - it has to wait for the nest, for the chicks to sprout, little electric shrubs with loud beaks. </p>
+        <p>Birds prove harder to catch. The pathogen struggles to get inside them mid-flight - it has to wait for the nest, for the chicks to sprout, tiny electric shrubs with loud beaks. </p>
     </div>
     <div class="leave">
         <p>
