--- a/entries/projects/magicandmachine/76silicon.html
+++ b/entries/projects/magicandmachine/76silicon.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="maintextsection">
-        <p>rows and rows of clever clever silicon. cavernous intelligence. underground or under the sea or anywhere.</p>
+        <p>rows upon rows of clever clever silicon. cavernous intelligence. underground or under the sea or anywhere.</p>
     </div>
     <div class="leave">
         <p>
