--- a/entries/projects/magicandmachine/80machinesoutofhand.html
+++ b/entries/projects/magicandmachine/80machinesoutofhand.html
@@ -12,8 +12,9 @@
 
 <body>
     <div class="maintextsection">
-        <p>Of course, there is always the possibility that we are just machines that got out of hand, or got left behind; religion as some form of ghost code, residual computer memory, or an attempt by our true maker to erase themselves with incense and myth.</p>
-        <p>Is that the common denominator of all technological leaps? A leap towards the invisible, the vanished, the insensible; that which can not be named or felt or remembered. </p>
+        <p>There is always the possibility that we are just machines that went too far, or machines that got left behind.</p>
+        <p>Religion - a form of ghost code, residual memory, or an attempt by our true maker to erase themselves with incense and myth.</p>
+        <p>Is the common denominator of all technological leaps a movement towards the invisible, the vanished, the insensible; that which can not be named or felt or remembered? </p>
     </div>
     <div class="leave">
         <p>
