--- a/entries/projects/magicandmachine/81storyends.html
+++ b/entries/projects/magicandmachine/81storyends.html
@@ -14,8 +14,8 @@
     <div class="maintextsection">
         <p>when electricity ends</p>
         <p>when paper ends</p>
-        <p>that's when the story really ends</p>
-        <p>that's when time really ends</p>
+        <p>that's when the story</p>
+        <p>that's when time</p>
     </div>
     <div class="leave">
         <p>
