--- a/entries/projects/magicandmachine/93invisible.html
+++ b/entries/projects/magicandmachine/93invisible.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="maintextsection">
-        <p>anything that remains invisible could merely be more intelligent than us</p>
+        <p>anything that remains invisible is simply more intelligent than us</p>
     </div>
     <div class="leave">
         <p>
