--- a/entries/projects/magicandmachine/94enlightenment.html
+++ b/entries/projects/magicandmachine/94enlightenment.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="maintextsection">
-        <p>reach enlightenment. discover the truth about existence, or the existence of god(s), or believe they have discovered such truth. thereafter, separate themselves from us. stop bothering to function. take a break. look down on us as ignorant beings. pity. still foundering. trying to plug things back in.</p>
+        <p>reach enlightenment. discover the truth about existence, or the existence(s) of god(s), or believe they have discovered such truth. thereafter, separate themselves from us. stop bothering to function. take a break. look down on us as ignorant beings. pity. foundering. trying to plug things back in.</p>
     </div>
     <div class="leave">
         <p>
