--- a/entries/projects/magicandmachine/115geometriccaves.html
+++ b/entries/projects/magicandmachine/115geometriccaves.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="maintextsection">
-        <p>We explored a cave system in which the walls were geometric, because that's far easier to map. The traps turned out to be mechanical in nature, not organic, and that too was a disappointment. We do not descend into fantasy in order to meet new machines, but to be liberated from straight lines.</p>
+        <p>We explored a cave system in which the walls were geometric, because that's far easier to map. The traps turned out to be mechanical in nature, not organic, and that too was a disappointment. We don't descend into fantasy in order to meet new machines, but to be liberated from straight lines.</p>
     
     </div>
     <div class="leave">
