--- a/entries/projects/magicandmachine/24turnovertheboard.html
+++ b/entries/projects/magicandmachine/24turnovertheboard.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="maintextsection">
-        <p>when you turn over the board you can call it the Underworld</p>
+        <p>when you turn over the board you're allowed to call it the Underworld</p>
     </div>
     <div class="leave">
         <p>
