--- a/entries/projects/thescreenreadersarcade.html
+++ b/entries/projects/thescreenreadersarcade.html
@@ -21,7 +21,7 @@
 
         <div class="imgcontainerhigher"><img src="../../resources/images/mexicandog.jpg" alt="lone dog on dappled cotton" id="mexicandogpic"><p>lone dappled mutt</p></div>
 
-        <div class="imgcontainersmallsquare"><img src="../../resources/images/treeedit.jpg" alt="beneath this silver birch and vapour trail, people were covered in mud, burning up, trying to complete a marathon. we walked and watched, breathing relatively free." id="treeeditpic"><p>people were covered in mud, burning up, trying to run a marathon</p></div>
+        <div class="imgcontainersmallsquare"><img src="../../resources/images/treeedit.jpg" alt="beneath this silver birch and vapour trail, people were covered in mud, burning up, trying to complete a marathon. we walked and watched, breathing relatively free." id="treeeditpic"><p>people were burning up, covered in mud, trying to run a marathon</p></div>
 
         <div class="imgcontainershortlandscape"><img src="../../resources/images/sleepingcat.jpg" alt="lone cat on dream felt" id="sleepingcatpic"><p>lone cat on dream felt</p></div>
 
@@ -196,6 +196,10 @@
         <div class="imgcontainerhigher"><img src="../../resources/images/fireblanket.jpg" alt="the sky over Fort Collins in the evening" id="fireblanketpic"><p>fire blanket</p></div>
 
         <div class="imgcontainerportrait"><img src="../../resources/images/gridlamp.jpg" alt="flying over the midwest at night" id="gridlamppic"><p>grid lamp</p></div>
+
+        <div class="imgcontainerportrait"><img src="../../resources/images/fernlight.jpg" alt="a flowering fern on the windowsill" id="fernlightpic"><p>a flick of fern light</p></div>
+
+        <div class="imgcontainerportrait"><img src="../../resources/images/mushrooms.jpg" alt="fungi in Shenandoah National Park" id="mushroomspic"><p>dead mushrooms on the mountain</p></div>
 
         
 
