--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
             <br><a href="./entries/poolinsect020722.html">poolinsect020722</a>
             <br><a href="./entries/prometheanparty240622.html">prometheanparty240622</a>
             <br><a href="./entries/rainkill051223.html">rainkill051223</a>
+            <br><a href="./entries/readingthroughthewindow120225.html">readingthroughthewindow120225</a>
             <br><a href="./entries/renegadestripes010822.html">renegadestripes010822</a>
             <br><a href="./entries/ritualplay181223.html">ritualplay181223</a>
             <br><a href="./entries/seahippo080522.html">seahippo080522</a>
