Add aliencons riverrun riverspine

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
     </div>
     <div class="links">
         <p>
-            <a href="./entries/acidbloodmarblesea030624.html">acidbloodmarblesea030624</a> 
+            <a href="./entries/acidbloodmarblesea030624.html">acidbloodmarblesea030624</a>
+            <br><a href="./entries/alienconsideration280225.html">alienconsideration280225</a> 
             <br><a href="./entries/amazonia140522.html">amazonia140522</a>
             <br><a href="./entries/antiquechurch240323.html">antiquechurch240323</a>
             <br><a href="./entries/bankandshoal130823.html">bankandshoal130823</a>
@@ -62,6 +63,8 @@
             <br><a href="./entries/readingthroughthewindow120225.html">readingthroughthewindow120225</a>
             <br><a href="./entries/renegadestripes010822.html">renegadestripes010822</a>
             <br><a href="./entries/ritualplay181223.html">ritualplay181223</a>
+            <br><a href="./entries/riverrun240225.html">riverrun240225</a>
+            <br><a href="./entries/riverspine210225.html">riverspine210225</a>
             <br><a href="./entries/seahippo080522.html">seahippo080522</a>
             <br><a href="./entries/shelter060624.html">shelter060624</a>
             <br><a href="./entries/silentsailing290124.html">silentsailing290124</a>
