Add flymesh and nightspring

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             <br><a href="./entries/dryfishing310722.html">dryfishing310722</a>
             <br><a href="./entries/eastertomb090423.html">eastertomb090423</a>
             <br><a href="./entries/efficientindustrialinstinct040324.html">efficientindustrialinstinct040324</a>
+            <br><a href="./entries/flymesh020425.html">flymesh020425</a>
             <br><a href="./entries/frames050522.html">frames050522</a>
             <br><a href="./entries/gladeframe300124.html">gladeframe300124</a>
             <br><a href="./entries/glassghostscosmictrips211023.html">glassghostscosmictrips211023</a>
@@ -52,6 +53,7 @@
             <br><a href="./entries/mouldlines160124.html">mouldlines160124</a>
             <br><a href="./entries/mythmakers131122.html">mythmakers131122</a>
             <br><a href="./entries/nightbugs031122.html">nightbugs031122</a>
+            <br><a href="./entries/nightspring040425.html">nightspring040425</a>
             <br><a href="./entries/notknowingmeteors200824.html">notknowingmeteors200824</a>
             <br><a href="./entries/onlinechess140923.html">onlinechess140923</a>
             <br><a href="./entries/passwordbabble311023.html">passwordbabble311023</a>
