--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
             <br><a href="./entries/bubblecars200723.html">bubblecars200723</a>
             <br><a href="./entries/butterflyrings051022.html">butterflyrings051022</a>
             <br><a href="./entries/carbonraincopy030523.html">carbonraincopy030523</a>
+            <br><a href="./entries/cardinalbug110525.html">cardinalbug110525</a>
+            <br><a href="./entries/chesspissfailure150425.html">chesspissfailure150425</a>
             <br><a href="./entries/coralgym150524.html">coralgym150524</a>
             <br><a href="./entries/differentdogs030423.html">differentdogs030423</a>
             <br><a href="./entries/distanceandfrost130824.html">distanceandfrost130824</a>
