add to the arcade

--- a/entries/projects/thearcade.html
+++ b/entries/projects/thearcade.html
@@ -102,6 +102,8 @@
     kiln blue<br> 
     fire blanket<br>
     grid lamp<br>
+    a flick of fern light<br>
+    dead mushrooms on the mountain<br>
 </p>
 
 
