new pieces and images

--- a/entries/projects/thearcade.html
+++ b/entries/projects/thearcade.html
@@ -104,6 +104,9 @@
     grid lamp<br>
     a flick of fern light<br>
     dead mushrooms on the mountain<br>
+    sandcomber<br>
+    branching the lake<br>
+    snow hook
 </p>
 
 
