--- a/entries/projects/thescreenreadersarcade.html
+++ b/entries/projects/thescreenreadersarcade.html
@@ -201,6 +201,12 @@
 
         <div class="imgcontainerportrait"><img src="../../resources/images/mushrooms.jpg" alt="fungi in Shenandoah National Park" id="mushroomspic"><p>dead mushrooms on the mountain</p></div>
 
+        <div class="imgcontainerhigher"><img src="../../resources/images/sandcomber.jpg" alt="shipwreck poking through the sand of Lake Superior" id="sandcomberpic"><p>sandcomber</p></div>
+
+        <div class="imgcontainershortlandscape"><img src="../../resources/images/watertwigs.jpg" alt="branches poking through Eighth Lake" id="watertwigspic"><p>branching the lake</p></div>
+
+        <div class="imgcontainershortlandscape"><img src="../../resources/images/snowhook.jpg" alt="from the top of Avalanche Peak" id="snowhookpic"><p>snow hook</p></div>
+
         
 
     </div>
