--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             <br><a href="./entries/cardinalbug110525.html">cardinalbug110525</a>
             <br><a href="./entries/chesspissfailure150425.html">chesspissfailure150425</a>
             <br><a href="./entries/coralgym150524.html">coralgym150524</a>
+            <br><a href="./entries/crowclimbandblue250625.html">crowclimbandblue250625</a>
             <br><a href="./entries/differentdogs030423.html">differentdogs030423</a>
             <br><a href="./entries/distanceandfrost130824.html">distanceandfrost130824</a>
             <br><a href="./entries/drawnbyhand131223.html">drawnbyhand131223</a>
@@ -49,6 +50,7 @@
             <br><a href="./entries/hailcast010424.html">hailcast010424</a>
             <br><a href="./entries/hawkingdrive220723.html">hawkingdrive220723</a>
             <br><a href="./entries/heatingandbulbs021224.html">heatingandbulbs021224</a>
+            <br><a href="./entries/hide250625.html">hide250625</a>
             <br><a href="./entries/meaningmystery131123.html">meaningmystery131123</a>
             <br><a href="./entries/millenniumbug291123.html">millenniumbug291123</a>
             <br><a href="./entries/missedclamsandoldstones100423.html">missedclamsandoldstones100423</a>
