add adirondacks and a few images

--- a/entries/projects/thearcade.html
+++ b/entries/projects/thearcade.html
@@ -106,7 +106,9 @@
     dead mushrooms on the mountain<br>
     sandcomber<br>
     branching the lake<br>
-    snow hook
+    snow hook<br>
+    weeds<br>
+    avalanche line
 </p>
 
 
