--- a/entries/projects/thescreenreadersarcade.html
+++ b/entries/projects/thescreenreadersarcade.html
@@ -207,6 +207,10 @@
 
         <div class="imgcontainershortlandscape"><img src="../../resources/images/snowhook.jpg" alt="from the top of Avalanche Peak" id="snowhookpic"><p>snow hook</p></div>
 
+        <div class="imgcontainerportrait"><img src="../../resources/images/weeds.jpg" alt="a grove" id="weedspic"><p>weeds</p></div>
+
+        <div class="imgcontainershortlandscape"><img src="../../resources/images/avalanchepeak.jpg" alt="from the top of Avalanche Peak" id="avalanchepeakpic"><p>avalanche line</p></div>
+
         
 
     </div>
