--- a/entries/strangeshowers280524.html
+++ b/entries/strangeshowers280524.html
@@ -22,7 +22,7 @@
 
 
     <div class="mainentry">
-        <p>In the shower, ignoring the sound of water in my ears, I listen to a podcast discussion about an Anglo-Saxon poem in whcih an unnamed female speaker laments the loss of her lord, then experiences the urge to live in an earth cave under the roots of an old oak tree. Life is unspeakably strange.</p>
+        <p>In the shower, ignoring the sound of water in my ears, I listen to a podcast discussion about an Anglo-Saxon poem in which an unnamed female speaker laments the loss of her lord, then experiences the urge to live in an earth cave under the roots of an old oak tree. Life is unspeakably strange.</p>
 
         <p>Earlier, I stared at a pyramid-shaped tea bag, watched the air bubbles trap between the leaves and the fine mesh. Tea bags often contain trace amounts of plastic, enough that, when you try to compost them without sufficient heat, they leave faint, skeletal forms in the earth long after everything else has broken down.</p>
 
