--- a/entries/toygunsandchristmasmist271224.html
+++ b/entries/toygunsandchristmasmist271224.html
@@ -22,7 +22,7 @@
 
 
     <div class="mainentry">
-        <p>It's raining outside for the first time in weeks. The air is warm and wet and the sky is no longer clear or freezing.</p>
+        <p>It's raining outside for the first time in weeks. The air is warm and wet and the sky is no longer freezing or clear.</p>
         
         <p>The front door of the house across the road opens. A boy, roughly eight or nine years old, appears in his pyjamas. He steps out onto the porch and looks cheerful. His pyjamas are blue with stars on them. He disappears for a moment, down the street, out of sight.</p>
 
