Add three images

--- a/entries/projects/thearcade.html
+++ b/entries/projects/thearcade.html
@@ -108,7 +108,10 @@
     branching the lake<br>
     snow hook<br>
     weeds<br>
-    avalanche line
+    there's dirt and shimmer out there<br>
+    little godlet of the wood<br>
+    injured amphibian visitant<br>
+    avalanche line<br>
 </p>
 
 
