--- a/entries/projects/thescreenreadersarcade.html
+++ b/entries/projects/thescreenreadersarcade.html
@@ -209,7 +209,15 @@
 
         <div class="imgcontainerportrait"><img src="../../resources/images/weeds.jpg" alt="a grove" id="weedspic"><p>weeds</p></div>
 
+        <div class="imgcontainersmallsquare"><img src="../../resources/images/dirtandshimmer.jpg" alt="campground by Eighth Lake" id="dirtandshimmerpic"><p>there's dirt and shimmer out there</p></div>
+
+        <div class="imgcontainerportrait"><img src="../../resources/images/godletofthewood.jpg" alt="an old car wrapped in the forest at the edge of the path" id="godletofthewoodpic"><p>little godlet of the wood</p></div>
+
+        <div class="imgcontainerportrait"><img src="../../resources/images/tortoise.jpg" alt="an injured tortoise" id="tortoisepic"><p>injured amphibian visitant</p></div>
+
         <div class="imgcontainershortlandscape"><img src="../../resources/images/avalanchepeak.jpg" alt="from the top of Avalanche Peak" id="avalanchepeakpic"><p>avalanche line</p></div>
+
+
 
         
 
