add images and two entries

--- a/entries/projects/thearcade.html
+++ b/entries/projects/thearcade.html
@@ -31,7 +31,7 @@
     red rock and rolled out blues<br>
     galactic gopher, winged and ruling from the pane<br>
     woodland bath path<br>
-    cumulonimbus wired to blitz<br>
+    cumulonimbus, wired to blitz<br>
     candlecake for the elderstep<br>
     sundrop over the horse yard<br>
     skypatch and mainframe<br>
@@ -106,12 +106,19 @@
     dead mushrooms on the mountain<br>
     sandcomber<br>
     branching the lake<br>
-    snow hook<br>
     weeds<br>
+    snow hook<br>
     there's dirt and shimmer out there<br>
     little godlet of the wood<br>
     injured amphibian visitant<br>
     avalanche line<br>
+    mirrored things<br>
+    why not the moon<br>
+    talk to us, out here<br>
+    sinker of scree<br>
+    the greenest cathedral<br> 
+    a welter of reeds<br>
+
 </p>
 
 
