--- a/entries/projects/thescreenreadersarcade.html
+++ b/entries/projects/thescreenreadersarcade.html
@@ -55,7 +55,7 @@
 
         <div class="imgcontainersmallsquare"><img src="../../resources/images/woodwalk.jpg" alt="woodland bath path" id="woodwalkpic"><p>woodland bath path</p></div>
 
-        <div class="imgcontainerhigher"><img src="../../resources/images/stormcloud.jpg" alt="cumulonimbus wired to fuck" id="stormcloudpic"><p>cumulonimbus wired to blitz</p></div>
+        <div class="imgcontainerhigher"><img src="../../resources/images/stormcloud.jpg" alt="cumulonimbus, wired for lightning" id="stormcloudpic"><p>cumulonimbus, wired to blitz</p></div>
 
         <div class="imgcontainerhigher"><img src="../../resources/images/birthday.jpg" alt="candlecake for the elderstep" id="birthdaypic"><p>candlecake for the elderstep</p></div>
 
@@ -205,21 +205,32 @@
 
         <div class="imgcontainershortlandscape"><img src="../../resources/images/watertwigs.jpg" alt="branches poking through Eighth Lake" id="watertwigspic"><p>branching the lake</p></div>
 
-        <div class="imgcontainershortlandscape"><img src="../../resources/images/snowhook.jpg" alt="from the top of Avalanche Peak" id="snowhookpic"><p>snow hook</p></div>
-
         <div class="imgcontainerportrait"><img src="../../resources/images/weeds.jpg" alt="a grove" id="weedspic"><p>weeds</p></div>
 
+        <div class="imgcontainerhigher"><img src="../../resources/images/snowhook.jpg" alt="from the top of Avalanche Peak" id="snowhookpic"><p>snow hook</p></div>
+
+    
         <div class="imgcontainersmallsquare"><img src="../../resources/images/dirtandshimmer.jpg" alt="campground by Eighth Lake" id="dirtandshimmerpic"><p>there's dirt and shimmer out there</p></div>
 
         <div class="imgcontainerportrait"><img src="../../resources/images/godletofthewood.jpg" alt="an old car wrapped in the forest at the edge of the path" id="godletofthewoodpic"><p>little godlet of the wood</p></div>
 
         <div class="imgcontainerportrait"><img src="../../resources/images/tortoise.jpg" alt="an injured tortoise" id="tortoisepic"><p>injured amphibian visitant</p></div>
 
-        <div class="imgcontainershortlandscape"><img src="../../resources/images/avalanchepeak.jpg" alt="from the top of Avalanche Peak" id="avalanchepeakpic"><p>avalanche line</p></div>
+        <div class="imgcontainerhigher"><img src="../../resources/images/avalanchepeak.jpg" alt="from the top of Avalanche Peak" id="avalanchepeakpic"><p>avalanche line</p></div>
+
+        <div class="imgcontainerhigher"><img src="../../resources/images/mirroredthings.jpg" alt="Eighth Lake, the Adirondacks" id="mirroredthingspic"><p>mirrored things</p></div>
+
+        <div class="imgcontainershortlandscape"><img src="../../resources/images/moonscape.jpg" alt="Craters of the Moon National Park" id="moonscapepic"><p>why not the moon</p></div>
+
+        <div class="imgcontainershortlandscape"><img src="../../resources/images/amphitheatre.jpg" alt="an open air amphitheatre, somewhere in Idaho" id="amphitheatrepic"><p>talk to us, out here</p></div>
+
+        <div class="imgcontainerhigher"><img src="../../resources/images/scree.jpg" alt="view from Avalanche Peak, descent" id="screepic"><p>sinker of scree</p></div>
+
+        <div class="imgcontainerportrait"><img src="../../resources/images/greenchurch.jpg" alt="a grove of ferns" id="greenchurchpic"><p>the greenest cathedral</p></div>
+
+        <div class="imgcontainerhigher"><img src="../../resources/images/reeds.jpg" alt="a tangle of red, firey branches" id="reedspic"><p>a welter of reeds</p></div>
 
 
-
-        
 
     </div>
     <div class="leave"> 
