--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
             <br><a href="./entries/skywitchlandbubbles250622.html">skywitchlandbubbles250622</a>
             <br><a href="./entries/snowscabs250324.html">snowscabs250324</a>
             <br><a href="./entries/soberattention290823.html">soberattention290823</a>
+            <br><a href="./entries/speedsoflight150625.html">speedsoflight150625</a>
             <br><a href="./entries/spottingfirethenfamine120523.html">spottingfirethenfamine120523</a>
             <br><a href="./entries/strangeshowers280524.html">strangeshowers280524</a>
             <br><a href="./entries/sweepserver200224.html">sweepserver200224</a>
@@ -92,6 +93,7 @@
             <br><a href="./entries/virtualdreamdrive210722.html">virtualdreamdrive210722</a>
             <br><a href="./entries/waitingnotingtime180923.html">waitingnotingtime180923</a>
             <br><a href="./entries/wakingdogs011024.html">wakingdogs011024</a>
+            <br><a href="./entries/wateredpause040625.html">wateredpause040625</a>
             <br><a href="./entries/wetradiovoice230522.html">wetradiovoice230522</a> 
             <br><a href="./entries/wheelingwatchingbirds181223.html">wheelingwatchingbirds181223</a>
             <br><a href="./entries/windwarp180323.html">windwarp180323</a>
