--- a/entries/projects/thearcade.html
+++ b/entries/projects/thearcade.html
@@ -118,6 +118,8 @@
     sinker of scree<br>
     the greenest cathedral<br> 
     a welter of reeds<br>
+    two men at the end of a world<br>
+    talk to us, out there, in the woods
 
 </p>
 
