--- a/entries/projects/thescreenreadersarcade.html
+++ b/entries/projects/thescreenreadersarcade.html
@@ -230,6 +230,10 @@
 
         <div class="imgcontainerhigher"><img src="../../resources/images/reeds.jpg" alt="a tangle of red, firey branches" id="reedspic"><p>a welter of reeds</p></div>
 
+        <div class="imgcontainerportrait"><img src="../../resources/images/ridgewalk.jpg" alt="two men descending Avalanche Peak" id="ridgewalkpic"><p>two men at the end of a world</p></div>
+
+        <div class="imgcontainershortlandscape"><img src="../../resources/images/forestamphi.jpg" alt="an amphitheatre in the woods" id="greenamphipic"><p>talk to us, out there, in the woods</p></div>
+
 
 
     </div>
