add gotera and sunarchive

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
             <br><a href="./entries/frames050522.html">frames050522</a>
             <br><a href="./entries/gladeframe300124.html">gladeframe300124</a>
             <br><a href="./entries/glassghostscosmictrips211023.html">glassghostscosmictrips211023</a>
+            <br><a href="./entries/gotera261125.html">gotera261125</a>
             <br><a href="./entries/grainwave050124.html">grainwave050124</a>
             <br><a href="./entries/hailcast010424.html">hailcast010424</a>
             <br><a href="./entries/hawkingdrive220723.html">hawkingdrive220723</a>
@@ -83,6 +84,7 @@
             <br><a href="./entries/speedsoflight150625.html">speedsoflight150625</a>
             <br><a href="./entries/spottingfirethenfamine120523.html">spottingfirethenfamine120523</a>
             <br><a href="./entries/strangeshowers280524.html">strangeshowers280524</a>
+            <br><a href="./entries/sunarchive101125.html">sunarchive101125</a>
             <br><a href="./entries/sweepserver200224.html">sweepserver200224</a>
             <br><a href="./entries/syntheticsun061123.html">syntheticsun061123</a>
             <br><a href="./entries/tallestfall090323.html">tallestfall090323</a>
