add composite edit chess

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             <br><a href="./entries/carbonraincopy030523.html">carbonraincopy030523</a>
             <br><a href="./entries/cardinalbug110525.html">cardinalbug110525</a>
             <br><a href="./entries/chesspissfailure150425.html">chesspissfailure150425</a>
+            <br><a href="./entries/compositelighttrain301225.html">compositelighttrain301225</a>
             <br><a href="./entries/coralgym150524.html">coralgym150524</a>
             <br><a href="./entries/crowclimbandblue250625.html">crowclimbandblue250625</a>
             <br><a href="./entries/differentdogs030423.html">differentdogs030423</a>
